change to #headerContainer style.  Removing position:relative to fix IE bleed through bug.

--- a/css/template.css
+++ b/css/template.css
@@ -17,9 +17,7 @@ body {
 
 #headerContainer {
     width: 100%;
-    position:relative;
-    min-width:920px;
-    
+    min-width:920px; 
 } 
 
 * html #headerContainer {
